--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,5 @@ VERSION_CODE=1
 
 ANDROID_BUILD_MIN_SDK_VERSION=7
 ANDROID_BUILD_TARGET_SDK_VERSION=19
-ANDROID_BUILD_SDK_VERSION=19
-ANDROID_BUILD_TOOLS_VERSION=20
+ANDROID_BUILD_SDK_VERSION=22
+ANDROID_BUILD_TOOLS_VERSION=22.0.1
