--- a/FloatingActionButton/build.gradle
+++ b/FloatingActionButton/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 21
     buildToolsVersion "22.0.1"
+    resourcePrefix "fab_"
 
     defaultConfig {
         applicationId 'com.faizmalkani.floatingactionbutton'
