preps for bintray release

--- a/FloatingActionButton/build.gradle
+++ b/FloatingActionButton/build.gradle
@@ -1,4 +1,9 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.jfrog.bintray'
+
+version = "1.0.0"
+
 android {
     compileSdkVersion 21
     buildToolsVersion "22.0.1"
@@ -25,7 +30,83 @@ android {
     }
 }
 
+def siteUrl = 'https://github.com/FaizMalkani/FloatingActionButton'      // Homepage URL of the library
+def gitUrl = 'https://github.com/FaizMalkani/FloatingActionButton.git'   // Git repository URL
+group = "com.faizmalkani.floatingactionbutton"
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+
+                // Add your description here
+                name 'FloatingActionButton'
+                url siteUrl
+
+                // Set your license
+                licenses {
+                    license {
+                        name 'The MIT License (MIT)'
+                        url 'https://github.com/FaizMalkani/FloatingActionButton/blob/master/LICENSE'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'FaizMalkani'
+                        name 'Faiz Malkani'
+                        email 'malkanifaiz@gmail.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+
+                }
+            }
+        }
+    }
+}
+
 dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
+}
 
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+
+    configurations = ['archives']
+    pkg {
+        repo = "maven"
+        name = "FloatingActionButton"
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["MIT"]
+        publish = true
+    }
 }
